# Graduation_Design_Visualization

./: .gitignore  AGENTS.md  Qwen3-Embedding-0.6B  README.md  pyproject.toml  vectorize_diary.py  vectorize_diary_sentences.py  visualize_diary_vectors.py  visualize_diary_vectors_advanced.py
diary_BackgroundRelations/: README.md  __init__.py  config.py  main.py
diary_ColorBlock_ContourLines/: README.md  main.py  requirements.txt
diary_ColorBlock_ContourLines/diary_visual/: __init__.py  analysis.py  config_std_save.py  pipeline.py  rendering.py
diary_ColorfulLines/: README.md  main.py
diary_Glitch/: README.md  main.py
diary_GridSpace/: README.md  main.py
diary_InTheMe/: README.md  main.py
diary_MultiBackground/: README.md  __init__.py  cleaning.py  config.py  main.py  output.py  pipeline.py  prefetch_texts.py  run_multibg.sh  run_multibg_test.sh  semantic_background_introductions.md  viewer.py
diary_PerspectiveSpace/: README.md  main.py
diary_ReferentialNetwork/: README.md  main.py
diary_Ring/: README.md  background.py  config.py  io_data.py  main.py  metrics.py  models.py  renderer.py  ring.py  tide_wave.py  utils.py
diary_SingleCharacterDensityMap/: README.md  main.py
diary_core/: README.md  __init__.py  embedding.py
format_floatingph_point/: format_for_indesign.py  input.txt  output.txt
tests/: test_embedding.py
