[project]
name = "biue-diary-visualization"
version = "0.1.0"
description = "Diary embedding and visualization experiments."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jieba>=0.42.1",
    "zhconv>=1.4",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "pillow>=10.0",
    "scikit-image>=0.22",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "socksio>=1.0",
    "cairocffi>=1.7",
]

[project.optional-dependencies]
embed = [
    "datasets>=2.18",
    "pyarrow>=15",
    "torch>=2.2",
    "transformers>=4.51",
    "umap-learn>=0.5.6",
]
cairo = [
    "pycairo>=1.26",
]

[tool.uv]
package = false
